image model added | rest_framework package installed and some configurations added

--- a/submissions/backend-senior/Maedeh-Shahabi/escrow_account/.env
+++ b/submissions/backend-senior/Maedeh-Shahabi/escrow_account/.env
@@ -5,3 +5,5 @@ DB_USERNAME=
 DB_PASSWORD=
 DB_URL=127.0.0.1
 DB_PORT=3306
+DEFAULT_AUTHENTICATION_CLASSES=
+DEFAULT_PERMISSION_CLASSES=rest_framework.permissions.AllowAny
