--- a/submissions/backend-senior/Maedeh-Shahabi/escrow_account/requirements.txt
+++ b/submissions/backend-senior/Maedeh-Shahabi/escrow_account/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.5.2
 Django==3.2.13
+djangorestframework==3.13.1
+mysqlclient==2.1.0
+Pillow==9.1.1
 python-decouple==3.6
-pymysql==1.0.2
 pytz==2022.1
 sqlparse==0.4.2
