--- a/submissions/backend-senior/Maedeh-Shahabi/escrow_account/.env
+++ b/submissions/backend-senior/Maedeh-Shahabi/escrow_account/.env
@@ -7,3 +7,4 @@ DB_URL=127.0.0.1
 DB_PORT=3306
 DEFAULT_AUTHENTICATION_CLASSES=
 DEFAULT_PERMISSION_CLASSES=rest_framework.permissions.AllowAny
+DEFAULT_VERSIONING_CLASS=rest_framework.versioning.NamespaceVersioning
