simple jwt package is installed and jwt access token and jwt refresh token api pathes added

--- a/submissions/backend-senior/Maedeh-Shahabi/escrow_account/.env
+++ b/submissions/backend-senior/Maedeh-Shahabi/escrow_account/.env
@@ -5,6 +5,6 @@ DB_USERNAME=
 DB_PASSWORD=
 DB_URL=127.0.0.1
 DB_PORT=3306
-DEFAULT_AUTHENTICATION_CLASSES=
-DEFAULT_PERMISSION_CLASSES=rest_framework.permissions.AllowAny
+DEFAULT_AUTHENTICATION_CLASSES=rest_framework_simplejwt.authentication.JWTAuthentication
+DEFAULT_PERMISSION_CLASSES=rest_framework.permissions.IsAuthenticated
 DEFAULT_VERSIONING_CLASS=rest_framework.versioning.NamespaceVersioning
