--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,33 @@
-initializing
+version: '3.8'
+
+services:
+  web:
+    build: ./escrow_project
+    command: >
+          sh -c "python manage.py runserver 0.0.0.0:8000 &&
+                 python manage.py makemigrations &&
+                 python manage.py test &&
+                 python manage.py runserver"
+    volumes:
+      - ./escrow_project/:/usr/src/app/
+    ports:
+      - 8000:8000
+    env_file:
+      - ./escrow_project/.env
+    depends_on:
+      - db
+  db:
+    image: postgres:latest
+    env_file:
+      - ./escrow_project/.env
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    healthcheck:
+        test: ["CMD-SHELL", "pg_isready -U postgres"]
+        interval: 5s
+        timeout: 5s
+        retries: 5
+
+volumes:
+  postgres_data:      
+    
