--- a/flutter_toman/pubspec.yaml
+++ b/flutter_toman/pubspec.yaml
@@ -74,12 +74,11 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
-  fonts:
-    - family: IranYekan
-      fonts:
-        - asset: assets/fonts/regular.ttf
-        - asset: assets/fonts/bold.ttf
-          weight: 700
+  #   - family: Schyler
+  #     fonts:
+  #       - asset: fonts/Schyler-Regular.ttf
+  #       - asset: fonts/Schyler-Italic.ttf
+  #         style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
