--- a/flutter_toman/pubspec.yaml
+++ b/flutter_toman/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   flutter_svg: ^1.0.3
+  dio: ^4.0.6
+  flutter_bloc: ^8.0.1
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
