--- a/environments/production.env
+++ b/environments/production.env
@@ -9,3 +9,5 @@ ESCROW_CELERY_REDIS_HOST=redis
 ESCROW_SECRET_KEY='not_good_idea_to_share_secret_here_mwahaha:))))'
 
 ESCROW_LOG_DIR=/logs
+
+ESCROW_MEDIA_ROOT=/media
