--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ async-timeout==4.0.2
 backports.zoneinfo==0.2.1
 billiard==3.6.4.0
 celery==5.2.7
+certifi==2022.6.15
 cffi==1.15.1
 cfgv==3.3.1
+charset-normalizer==2.1.0
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
@@ -19,10 +21,13 @@ django-filter==22.1
 django-timezone-field==5.0
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
+factory-boy==3.2.1
+Faker==13.15.0
 filelock==3.7.1
 flake8==4.0.1
-gunicorn==20.1.0
+freezegun==1.2.1
 identify==2.5.1
+idna==3.3
 kombu==5.2.4
 mccabe==0.6.1
 nodeenv==1.7.0
@@ -42,11 +47,15 @@ pytz==2022.1
 PyYAML==6.0
 rabbitmq==0.2.0
 redis==4.3.4
+requests==2.28.1
 six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
 tzdata==2022.1
+urllib3==1.26.10
+uWSGI==2.0.20
 vine==5.0.0
+virtualenv==20.15.1
 wcwidth==0.2.5
 whitenoise==6.2.0
 wrapt==1.14.1
