--- a/nginx/django.conf
+++ b/nginx/django.conf
@@ -1,5 +1,5 @@
 upstream escrow {
-    server unix:/socket/gunicron.sock;
+    server unix:/socket/app.sock;
 }
 
 server {
@@ -14,7 +14,7 @@ server {
     }
 
     location /static {
-        alias /static
+        alias /static;
     }
 
     location /nginx/status {
@@ -23,6 +23,8 @@ server {
     }
 
     location / {
+        # Note: for uWSGI which is compatible with uwsgi protocol it is better to use uwsgi_pass rather than proxy_pass ;)
+        # But for Gunicron needs to use proxy_pass http protocol which is slower than uwsgi. So let's use Chita!
         uwsgi_pass  escrow;
         include     /etc/nginx/uwsgi_params;
     }
