--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,8 @@ services:
     image: redis:6.2-alpine
     volumes:
       - redis_data:/data
+    ports:
+      - "6379:6379"
 
   nginx:
     build: ./nginx
@@ -66,6 +68,9 @@ services:
   grafana:
     image: grafana/grafana:latest
     restart: unless-stopped
+    environment:
+      - GF_SECURITY_ADMIN_USER:admin
+      - GF_SECURITY_ADMIN_PASSWORD:admin
     depends_on:
       - db
       - redis
