Replace loca settings instead development in development  environments

--- a/environments/development.env
+++ b/environments/development.env
@@ -1,4 +1,4 @@
-DJANGO_SETTINGS_MODULE=escrow.settings.settings_dev
+DJANGO_SETTINGS_MODULE=escrow.settings.settings_local
 
 ESCROW_PG_NAME=ESCROW
 ESCROW_PG_USER=ESCROW
