--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,15 @@ click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+coreapi==2.3.3
+coreschema==0.0.4
 Deprecated==1.2.13
 distlib==0.3.4
 Django==4.0.6
 django-celery-beat==2.3.0
 django-cors-headers==3.13.0
 django-filter==22.1
+django-rest-swagger==2.2.0
 django-timezone-field==5.0
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
@@ -28,9 +31,13 @@ flake8==4.0.1
 freezegun==1.2.1
 identify==2.5.1
 idna==3.3
+itypes==1.2.0
+Jinja2==3.1.2
 kombu==5.2.4
+MarkupSafe==2.1.1
 mccabe==0.6.1
 nodeenv==1.7.0
+openapi-codec==1.3.2
 packaging==21.3
 platformdirs==2.5.2
 pre-commit==2.19.0
@@ -48,10 +55,12 @@ PyYAML==6.0
 rabbitmq==0.2.0
 redis==4.3.4
 requests==2.28.1
+simplejson==3.17.6
 six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
 tzdata==2022.1
+uritemplate==4.1.1
 urllib3==1.26.10
 uWSGI==2.0.20
 vine==5.0.0
