--- a/requirements.txt
+++ b/requirements.txt
@@ -20,10 +20,10 @@ Django==4.0.6
 django-celery-beat==2.3.0
 django-cors-headers==3.13.0
 django-filter==22.1
-django-rest-swagger==2.2.0
 django-timezone-field==5.0
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
+drf-yasg==1.20.0
 factory-boy==3.2.1
 Faker==13.15.0
 filelock==3.7.1
@@ -31,6 +31,7 @@ flake8==4.0.1
 freezegun==1.2.1
 identify==2.5.1
 idna==3.3
+inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
 kombu==5.2.4
@@ -55,6 +56,8 @@ PyYAML==6.0
 rabbitmq==0.2.0
 redis==4.3.4
 requests==2.28.1
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
 simplejson==3.17.6
 six==1.16.0
 sqlparse==0.4.2
